# calculator

./: CMakeLists.txt  README.md  main.cpp  structure.cpp  structure.h
gui/: button.cpp  button.h  display.cpp  display.h  gui_component.cpp  gui_component.h
logic/: key_translator.cpp  key_translator.h
